# CGRAOmp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  deploy_docs.yml
Passes/: CMakeLists.txt  doxygen-main.dox  doxygen.conf.in
Passes/CGRAOmpPass/: CGRADataFlowGraph.cpp  CGRAOmpPass.cpp  CMakeLists.txt  VerifyPass.cpp
Passes/CGRAOmpPlugins/: CGRAModel.cpp  CMakeLists.txt
Passes/CGRAOmpVerifyPass/: CMakeLists.txt  VerifyPass.cpp
Passes/OptionPlugin/: CMakeLists.txt  OptionPlugin.cpp
docker/: Dockerfile-centos  Dockerfile-ubuntu-20.04
include/: AGVerifyPass.hpp  BalanceTree.hpp  CGRADataFlowGraph.hpp  CGRAInstMap.hpp  CGRAModel.hpp  CGRAOmpAnnotationPass.hpp  CGRAOmpPass.hpp  DFGPass.hpp  DecoupledAnalysis.hpp  LoopDependencyAnalysis.hpp  OptionPlugin.hpp  Utils.hpp  VerifyPass.hpp  common.hpp
include/cgraomp/: cgraomp.h
scripts/: cgraomp-cc  clang-cgraomp  driver.py
scripts/backend/: __init__.py  backend_wrapper.py  decorder.py  dump
scripts/cc_config/: Config.py  __init__.py
share/presets/: decoupled_affine_AG.json  typycal_time_multiplex.json
share/samples/conv/: conv.c
share/samples/fft/: fft.c
share/samples/simple/: simple.c
share/samples/simple_3nested/: simple_3nested.c
share/samples/simple_memdep/: simple_memdep.c
src/: CMakeLists.txt  doxygen-main.md  doxygen.conf.in
src/Passes/: CMakeLists.txt
src/Passes/CGRAModel/: CGRAInstMap.cpp  CGRAModel.cpp  CMakeLists.txt
src/Passes/CGRAOmpAnnotationPass/: AnnotationPasses.def  CGRAOmpAnnotationPass.cpp  CMakeLists.txt  RegisterPass.cpp
src/Passes/CGRAOmpComponents/: CGRADataFlowGraph.cpp  CGRAInstMap.cpp  CGRAModel.cpp  CMakeLists.txt  OptionPlugin.cpp  Utils.cpp
src/Passes/CGRAOmpDFGPass/: BalanceTree.cpp  BuiltInDFGPasses.def  CMakeLists.txt  DFGPass.cpp
src/Passes/CGRAOmpPass/: CGRAOmpPass.cpp  CMakeLists.txt  OmpPasses.def
src/Passes/CGRAOmpPlugins/: CGRAInstMap.cpp  CGRAModel.cpp
src/Passes/CGRAOmpVerifyPass/: AGVerifyPass.cpp  CMakeLists.txt  DecoupledAnalysis.cpp  LoopDependencyAnalysis.cpp  RegisterPass.cpp  VerifyPass.cpp  VerifyPasses.def
src/Passes/HelloDFGPass/: CMakeLists.txt  HelloDFGPass.cpp  HelloDFGPass.hpp
